[package]
name = "eslint-markdown"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
markdown = { version = "1.0.0", features = ["serde"] }
napi = { version = "3.9.4", default-features = false, features = ["napi4"] }
napi-derive = "3.5.7"
serde_json = "1.0.150"

[build-dependencies]
napi-build = "2.3.2"
